[VEL-70] - fixed overlap of container and navbar with padding-bottom

--- a/src/app/customers/customers.component.css
+++ b/src/app/customers/customers.component.css
@@ -2,6 +2,7 @@
   font-family: "SFCompactText-Medium", Arial, Helvetica, sans-serif;
   font-size: 14px;
   margin-top: 0.8rem;
+  padding-bottom: 3rem;
 }
 
 .container > h1 {
