--- a/src/app/deliveries/deliveries.component.css
+++ b/src/app/deliveries/deliveries.component.css
@@ -1,5 +1,6 @@
 .container {
   font-size: 14px;
+  padding-bottom: 9rem;
 }
 
 .container > h1 {
